name:                haddocset
version:             0.4.3
synopsis:            Generate docset of Dash by Haddock haskell documentation tool
description:         please read README.md <https://github.com/philopon/haddocset/blob/master/README.md>
license:             BSD3
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/haddocset
Bug-reports:         https://github.com/philopon/haddocset/issues
copyright:           (c) 2014-2017 Hirotomo Moriwaki
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable haddocset
  main-is:             Main.hs
  other-modules:
      Documentation.Haddocset
      Documentation.Haddocset.Index
      Documentation.Haddocset.Plist
  ghc-options:         -Wall -O2
  build-depends:       base                 
                     , bytestring
                     , ghc                  
                     , optparse-applicative 
                     , conduit              
                     , conduit-extra        
                     , tagsoup              
                     , Cabal                
                     , text                 
                     , sqlite-simple        
                     , process              
                     , directory            
                     , filepath             
                     , transformers         
                     , exceptions           
                     , resourcet            
                     , mtl                  
                     , http-types           
  if impl(ghc >= 7.8)
    build-depends:     haddock-api          
  else
    build-depends:     haddock              

  if !impl(ghc >= 8.0)
    build-depends:     semigroups           >=0.18

  default-language:    Haskell2010
